--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "guzzlehttp/guzzle": "~6.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "guzzlehttp/guzzle": "~6.2",
-        "needim/noty": "^3.1"
+        "needim/noty": "^3.1",
+        "sendgrid/sendgrid": "^6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
